add happy path in test change swagger grouping handlers
