# orchestrator/docs/swagger.json
@@ -27,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Expressions"
+                    "Calculations"
                 ],
                 "summary": "Создание нового выражения",
                 "parameters": [
@@ -51,7 +51,7 @@
                 }
             }
         },
-        "/{uid}": {
+        "/expression/{uid}": {
             "get": {
                 "description": "Получает результат по указанному идентификатору из хранилища",
                 "consumes": [
@@ -61,7 +61,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Results"
+                    "Calculations"
                 ],
                 "summary": "Получение результата по идентификатору",
                 "parameters": [
